# SemiPlayer

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  FFMPEG_ENV_SETUP.md  README.md  TODO.md
.cargo/: config.toml
docs/: README.md  architecture.md  error_convention.md  lifecycle.md
docs/adr/: 001-decoder-drain-queue.md
docs/dev/: abi.md  d3d11-libplacebo-integration-plan.md  d3d11-libplacebo-render.md  ffmpeg-usage.md  internal-video-sync.md  pipeline.md  player-locking-model.md  render-ownership.md  seek.md  sync.md
docs/env/: windows.md
docs/modules/api_layer/: api_layer.md  close.md  open.md  play.md  seek.md
docs/modules/audio_clock/: audio_clock.md
docs/modules/audio_resampler/: audio_resampler.md
docs/modules/demuxer/: demuxer.md
docs/modules/gpu_device/: gpu_device.md
docs/modules/ioc_container/: ioc_container.md
docs/modules/notifier/: notifier.md
docs/modules/video_sync/: video_sync.md
include/semi_player/: semi_player.h  status.h
semi_player_rs/: Cargo.toml  build.rs
semi_player_rs/docs/: layer_boundaries.md  refactor_layers.md  resource_graph_scheduler.md  target_architecture.md
semi_player_rs/src/: core.rs  lib.rs  render.rs  sync.rs
semi_player_rs/src/api/: error.rs  mod.rs  types.rs
semi_player_rs/src/audio/: backends.rs  core.rs
semi_player_rs/src/audio/backends/: mod.rs
semi_player_rs/src/audio/core/: clock.rs  frame.rs  mod.rs  output.rs  output_controller.rs  resampler.rs
semi_player_rs/src/core/: media.rs  player.rs
semi_player_rs/src/core/media/: decoder.rs  error.rs  keyframe_probe.rs  mod.rs  opened.rs  output.rs  probe.rs  session.rs  session_decode.rs  session_lifecycle.rs  session_shared.rs
semi_player_rs/src/core/player/: decode_worker.rs  execution.rs  handle.rs  mod.rs  orchestrator.rs  pump.rs  runtime.rs  schedule.rs  sync_worker.rs  video_sync.rs  view.rs  worker.rs
semi_player_rs/src/core/player/execution/: decode_supply.rs  playback_advance.rs  render_supply.rs
semi_player_rs/src/core/sync/: mod.rs
semi_player_rs/src/decode/: decoder.rs  error.rs  mod.rs  policy.rs  video.rs
semi_player_rs/src/decode/decoder/: map.rs  open.rs  planner.rs  pump.rs  shared.rs
semi_player_rs/src/decode/session/: decode.rs  lifecycle.rs  mod.rs  shared.rs
semi_player_rs/src/demux/: diagnostics.rs  mod.rs
semi_player_rs/src/platform/: windows.rs
semi_player_rs/src/platform/common/: mod.rs
semi_player_rs/src/platform/windows/: mod.rs
semi_player_rs/src/player/: access.rs  diagnostics.rs  handle.rs  mod.rs  orchestrator.rs  pump.rs  runtime.rs  view.rs
semi_player_rs/src/player/execution/: decode_supply.rs  decoded_output_apply.rs  mod.rs  playback_advance.rs  render_supply.rs
semi_player_rs/src/player/worker/: decode.rs  mod.rs  render.rs  sync.rs
semi_player_rs/src/render/: core.rs  mod.rs  orchestrator.rs  pipelines.rs  service.rs
semi_player_rs/src/render/backends/: d3d11.rs
semi_player_rs/src/render/backends/d3d11/: mod.rs
semi_player_rs/src/render/core/: converter.rs  frame.rs  mod.rs  pipeline.rs  planner.rs  scheduler.rs
semi_player_rs/src/render/core/convert/: pixel_format.rs
semi_player_rs/src/render/gpu/: d3d11.rs  mod.rs
semi_player_rs/src/render/gpu/d3d11/: compute.rs  converter.rs  device.rs  interop.rs  renderer.rs
semi_player_rs/src/render/gpu/d3d11/shaders/: nv12_to_bgra_cs.hlsl
semi_player_rs/src/render/pipelines/: cpu_bgra.rs  d3d11_presenter.rs  mod.rs
semi_player_rs/src/scheduler/: decision.rs  mod.rs  snapshot.rs  state.rs  types.rs
semi_player_rs/src/subtitle/: mod.rs
semi_player_rs/src/subtitle/ass/: mod.rs
semi_player_rs/src/subtitle/model/: mod.rs
semi_player_rs/src/sync/: clock.rs  schedule.rs  video_sync.rs
semi_player_rs/src/util/: debug_trace.rs  mod.rs  time.rs
src/: CMakeLists.txt  api_export.cpp  player.cpp  player.hpp
src/application/: CMakeLists.txt  api_layer.cpp  api_layer.hpp
src/domain/: CMakeLists.txt
src/domain/demuxer/: CMakeLists.txt  demuxer.cpp  demuxer.hpp  demuxer_backend.hpp
src/domain/generation/: CMakeLists.txt  generation.cpp  generation.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/ffmpeg/: CMakeLists.txt  ffmpeg_demuxer_backend.cpp  ffmpeg_demuxer_backend.hpp
src/infrastructure/log/: CMakeLists.txt  log.cpp  log.hpp
src/infrastructure/notifier/: CMakeLists.txt  default_notifier.cpp  default_notifier.hpp  notifier.hpp
src/ioc/: CMakeLists.txt  ioc_container.cpp  ioc_container.hpp
tests/: CMakeLists.txt
tests/application/: CMakeLists.txt  api_layer_test.cpp
tests/domain/: CMakeLists.txt
tests/domain/demuxer/: CMakeLists.txt  demuxer_test.cpp
tests/domain/generation/: CMakeLists.txt  generation_test.cpp
tests/infrastructure/: CMakeLists.txt
tests/infrastructure/ffmpeg/: CMakeLists.txt  ffmpeg_dependency_test.cpp
tests/infrastructure/log/: CMakeLists.txt  log_test.cpp
tests/infrastructure/notifier/: CMakeLists.txt  notifier_test.cpp
tests/resources/: README.md
tools/host_smoke/: CMakeLists.txt  main.cpp
tools/smoke/SemiPlayer.HelloTest/: Program.cs  SemiPlayer.HelloTest.csproj
